# mlops_final_project_nyc_green_taxi

./: .gitignore  .pre-commit-config.yaml  Final_Group_Project_Requirements_Checklist.md  Makefile  README.md  README_dev.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dags/: deployment_dag.py  drift_dag.py  training_dag.py
docker/: airflow-requirements.txt  airflow.Dockerfile  fastapi.Dockerfile  mlflow.Dockerfile
docs/: architecture.md  data_dictionary.md  dataset.md  drift_plan.md
notebooks/: demo.ipynb
reports/: data_drift.html  target_drift.html
scripts/: init-multiple-databases.sh
src/: config.py  logging_utils.py
src/data/: get_data.py  simulate_drift.py
src/deployment/: promote.py
src/features/: transform.py
src/models/: train.py  validate.py
src/monitoring/: generate_drift.py
src/serve/: app.py  sample_request.py
tests/: test_api_smoke.py  test_data.py  test_train_validate.py  test_transform.py
tools/: run_hadolint.py
