[project]
name = "mlops-final-project"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = [
    "numpy>=2.0.2,<2.2",
    "scipy>=1.13,<1.15",
    "pandas>=2.2.2,<2.3",
    "scikit-learn>=1.5,<1.6",

    "mlflow>=2.20,<3",
    "pyarrow>=17,<18",

    "fastapi>=0.115,<0.117",
    "uvicorn>=0.30,<0.33",
    "pydantic>=2.7,<2.12",

    "pyyaml>=6.0,<7",
    "requests>=2.31,<3",
    "joblib>=1.3,<2",
    "prometheus-client>=0.19,<0.23",

    "evidently==0.4.29",
    "shap==0.46.*",
    "numba==0.60.*",
    "llvmlite==0.43.*",
    "matplotlib>=3.9,<3.11",
    "plotly>=5.22,<5.25",
    "fastparquet>=2024.2.0,<2025.1",

    "pytest>=8.2,<8.3",
    "ruff==0.5.6",
    "pre-commit>=3.7,<3.8",
    "ipykernel>=6.30.1,<6.31",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
